# plover-autospacer

./: autospacer.py  setup.cfg
