[metadata]
name = plover-autospacer
version = 1.0.0
description = Plover plugin to automatically set default space mode based on system
keywords = plover plover_plugin
classifiers =
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
	plover>=4.0.0.dev8
py_modules =
	autospacer

[options.entry_points]
plover.extension =
  autospacer = autospacer:AutoSpacer
